Cybergame-Website-dev/manifest/cbgame88/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cybergame-website-prod
  namespace: cybergame-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cybergame-website-prod
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cybergame-website-prod
    spec:
      imagePullSecrets:
        - name: cybergame-registrykey
      containers:
        - name: cybergame-website-prod
          image: cyberrich/cybergame-website:latest
          imagePullPolicy: Always
          #          livenessProbe:
          #            httpGet:
          #              path: /actuator/health/liveness
          #              port: 3000
          #            initialDelaySeconds: 15
          #            periodSeconds: 4
          #          readinessProbe:
          #            httpGet:
          #              path: /actuator/health/readiness
          #              port: 3000
          #            initialDelaySeconds: 15
          #            periodSeconds: 4
          ports:
            - name: http
              containerPort: 3000
