Cybergame-Website-dev/manifest/cbgame88/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cybergame-website-prod
  namespace: cybergame-prod
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: cybergame-website-prod
