Cybergame-Website-dev/manifest/cbgame88/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cybergame-website-prod
  namespace: cybergame-prod
spec:
  rules:
    - host: www.cbgame88.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybergame-website-prod
                port:
                  number: 3000

  ingressClassName: nginx
